# moonsugar

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md
include/moonsugar/: api.h  assert.h  compress.h  config.h  containers.h  coroutine.h  file.h  functional.h  hash.h  log.h  memory.h  path.h  platform.h  plugin.h  sys.h  test.h  thread-internal.h  thread.h  uri.h  util.h  version.h.in
include/moonsugar/containers/: auto-array.h  bit-array.h  bitset.h  indexed-pool.h  map.h  paged-array.h  paged-vector.h  pool.h  ring.h  sparse-paged-array.h
scripts/: depcopy.cmake  install.cmake  moonsugar-config.cmake.in  target.cmake  test.cmake
src/: compress.c  config.c  coroutine.c  functional.c  hash.c  path.c  plugin.c  uri.c
src/containers/: auto-array.c  bit-array.c  bitset.c  indexed-pool.c  map.c  paged-array.c  paged-vector.c  pool.c  ring.c  sparse-paged-array.c
src/file/: file.c  unix.c  win32.c
src/log/: console.c  file.c  log.c
src/memory/: arena.c  freelist.c  heap.c  interface.c  os.unix.c  os.win32.c  stack.c
src/platform/memory/: os.unix.c  os.win32.c
src/platform/sys/: sys.arm.c  sys.c  sys.osx.c  sys.win32.c  sys.x86.c
src/sys/: sys.arm.c  sys.c  sys.osx.c  sys.win32.c  sys.x86.c
src/thread/: mutex.unix.c  mutex.win32.c  pool.c  rwlock.unix.c  rwlock.win32.c  spinlock.c  task.c  thread.c  thread.unix.c  thread.win32.c
test/: compress.c  config.c  coroutine.c  handle.c  log.c  path.c  spinlock.c  thread-pool.c  thread.c  types.c  uri.c  util.c
test/containers/: auto-array.c  bit-array.c  bitset.c  indexed-pool.c  map.c  paged-array.c  paged-vector.c  pool.c  ring.c  sparse-paged-array.c
test/memory/: arena.c  heap.c  os.c
test/plugin/: plugin.c  test-plugin.c
